# wavio

./: .fallowrc.json  .gitignore  CLAUDE.md  LICENSE.txt  README.md  app.json  babel.config.js  biome.json  bunfig.toml  crowdin.yml  declarations.d.ts  eas.json  index.js  metro.config.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  react-native.config.js  skills-lock.json  tailwind.config.js  tsconfig.json
.claude/: settings.json
__tests__/: activity.store.test.ts  app.store.test.ts  auth.store.test.ts  jukebox.store.test.ts  musicFolders.store.test.ts  network.test.ts  offline.store.test.ts  playlists.store.test.ts  podcasts.store.test.ts  queue.store.test.ts  recentPlays.store.test.ts  recentSearches.store.test.ts  servers.store.test.ts
android/: gradle.properties  settings.gradle
app/: _layout.tsx  favorites.tsx  player.tsx  recent-searches.tsx  search-results.tsx  settings.tsx
apps/mobile/modules/audio-tagger/native/: .gitignore  CMakeLists.txt  README.md  build.sh  tagger.cpp
components/: AddBottomSheet.tsx  CarAutoSync.tsx  CollapsibleTabs.tsx  CustomBackdrop.tsx  DraggableFlashList.tsx  DrawerMenu.tsx  EmptyDisplay.tsx  ErrorDisplay.tsx  FadeOut.tsx  FadeOutScaleDown.tsx  FlashDragList.tsx  FloatingPlayer.tsx  MovingText.tsx  OfflineBanner.tsx  ServerTypeIcon.tsx  Slider.tsx  StarRating.tsx
config/: i18n.ts  storage.ts  theme.ts
hooks/: useBottomSheetBackHandler.ts  useCapabilities.ts  useDebounce.ts  useImageColors.ts  useJellyfinDefaultLibrary.ts  useLogTrackPlayerState.ts  useOfflineDownloads.ts  useRepeatMode.ts  useSetupTrackPlayer.ts  useSyncedLyrics.ts  useTrackListPress.ts  useWebsiteMetadata.ts
i18n/: en.ts  fr.ts
ios/: Podfile  Podfile.properties.json
patches/: @sentry%2Freact-native@8.14.0.patch  expo-audio@55.0.14.patch  (+12 more)
(+1114 files in other folders)
